[project]
name = "babyarcdoodoodoodoo"
version = "0.1.0"
description = "Messing with ARC-AGI 2025"
authors = [
    {name = "Frank Cao",email = "franktcao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
